<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryWhite"
    android:layout_marginBottom="1dp"
    android:padding="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        app:srcCompat="@drawable/ic_image_black_24dp" />

    <AutoCompleteTextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:hint="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat" />
    <AutoCompleteTextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/imageView"
        android:layout_marginTop="5dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:hint="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat" />
    <AutoCompleteTextView
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_toRightOf="@+id/imageView"
        android:layout_marginTop="5dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:hint="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/price"
        android:layout_alignRight="@+id/price"
        android:layout_below="@+id/price"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_from_camera" />

        <Button
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_from_gallery" />
    </LinearLayout>

</RelativeLayout>
