<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryWhite"
    android:layout_marginBottom="1dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:padding="8dp"
        app:srcCompat="@drawable/ic_image_black_24dp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/checkBox"
        android:layout_toRightOf="@+id/imageView"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignLeft="@+id/name"
        android:layout_toLeftOf="@+id/checkBox"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat" />
    <TextView
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toLeftOf="@+id/checkBox"
        android:layout_marginTop="5dp"
        android:ellipsize="marquee"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/price"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:visibility="invisible"
        android:text="" />

</RelativeLayout>
